  message 'interwiki-desc-PREFIX', not really used anywhere yet though
* (bug 9691) Add type (signup or login) parameter to AuthPlugin::ModifyUITemplate()
* (bug 14454) "Member of group(s)" in Special:Preferences causes language difficulties
* (bug 16697) Unicode combining characters are difficult to edit in some browsers
* Parser test supports uploading results to remote CodeReview instance
* (bug 20013) Added CSS class "mw-version-ext-version" is wrapped on the 
  extension version in Special:Version
* (bug 20014) Added CSS class "mw-listgrouprights-right-name" is wrapped on the
  right name in Special:ListGroupRights
* (bug 12920) New CoreParserFunction {{nse:...}} as an url-friendly equivalent
  to {{ns:...}}
* (bug 16322) Allow maintenance scripts to accept DB user/pass over input or params
* (bug 18566) Maintenance script to un/protect pages
* (bug 671) The HTML <abbr> tag is now permitted.
* RecentChanges now has a legend to explain what the Nmb! flags mean, and the
  flags have tooltips.
* (bug 15209) New hook BeforeInitialize called after everything has been setup
  but before Mediawiki::performRequestForTitle()
* wgMainPageTitle variable now available to JavaScript code to identify the main
  page link, so it doesn't have to be extracted from the link URLs.
* (bug 16836) Display preview of signature in user preferences and describe its use
* The default output format is now HTML 5 instead of XHTML 1.0 Transitional.
  This can be disabled by setting $wgHtml5 = false;.  Specific features enabled
  if HTML 5 is used:
** New HTML 5 input attributes allow JavaScript-free input validation in some
   cutting-edge browsers.  E.g., some inputs will be autofocused, users will
   not be allowed to submit forms with certain types of invalid values (like
   numbers outside the permitted ranges), etc.
** The summary attribute has been removed from tables of contents.  summary is
   obsolete in HTML 5 and wasn't useful here anyway.