@@ -160,6 +160,8 @@ this. Was used when mwEmbed was going to be an extension.
 * (bug 9691) Add type (signup or login) parameter to AuthPlugin::ModifyUITemplate()
 * (bug 14454) "Member of group(s)" in Special:Preferences causes language difficulties
 * (bug 16697) Unicode combining characters are difficult to edit in some browsers
+* IndexPager->mLimitsShown can now be an associative array of limit => text-to-
+  display-in-limit-form.
 * Parser test supports uploading results to remote CodeReview instance
 * (bug 20013) Added CSS class "mw-version-ext-version" is wrapped on the 
   extension version in Special:Version
